LoginForm with MUI

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
-.App {
+html, body {
   text-align: center;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #D2D3CD;
 }
