--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,9 @@
 html, body {
   text-align: center;
+  position: absolute;
   margin: 0;
   padding: 0;
-
+  height: 100%;
+  width: 100%;
   background-color: #D2D3CD;
 }
